.metadata/.plugins/org.eclipse.cdt.ui/prueba.build.log
19:29:35 **** Incremental Build of configuration Debug for project prueba ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\prueba.o" "..\\src\\prueba.c" 
..\src\prueba.c: In function 'main':
..\src\prueba.c:20:9: error: assignment to expression with array type
  nombre = tolower(nombre[0]);
         ^

19:29:35 Build Failed. 1 errors, 0 warnings. (took 269ms)

